ローカルでの動作確認用DBを追加

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,7 @@
 AUTHOR_SEARCH_KEYWORDS="author1 author2 author3"
 SINKAN_TUUTI_SLACK_URL='webhook url'
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=test_db
+DB_USER=admin
+DB_PASSWORD=password
